[New|Chg] exo2 début - new user & connexion frag done